# gisbot

./: .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  INSTALL.md  LICENSE  README.md  SETUP.md  config.json  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/routes/: agent.py  agent_nanobot.py  upload.py  workspace.py
config/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
core/: __init__.py  config.py  constants.py
core/agent/: context.py  enhanced_loop.py  llm_memory.py  loop.py  memory.py  skills.py  subagent.py
core/agents/: base.py  general.py  gis_adapter.py  registry.py  router.py
core/bus/: __init__.py  events.py  queue.py
core/providers/: __init__.py  anthropic.py  base.py  dashscope.py  factory.py  openai.py
core/tools/: __init__.py  arcpy.py  base.py  file_analysis.py  message.py  registry.py  spawn.py  system.py
core/tools/data/: __init__.py  convert.py  formats.py  raster.py  read.py  write.py
core/tools/gis/: __init__.py  clip.py  proximity.py
core/utils/: __init__.py  json_io.py
core/workspace/: __init__.py  manager.py  memory.py
docs/: workspace-multi-project.md
docs/progress/: nanobot-upgrade-progress.md
session/: __init__.py  manager.py
skills/: __init__.py
skills/autonomous/: __init__.py  auto_exploration.md  problem_diagnosis.md  result_verification.md  task_planning.md  task_planning.py
skills/buffer/: SKILL.md
skills/etl_automation/: SKILL.md
skills/overlay/: SKILL.md
skills/spatial_join/: SKILL.md
static/: index.html
tests/e2e/: __init__.py  conftest.py  test_chat_flow.py  test_session_management.py  test_tools_api.py
tests/integration/: conftest.py  test_enhanced_loop.py
tests/unit/agent/: conftest.py  test_context.py  test_llm_memory.py  test_loop.py  test_memory.py  test_skills.py  test_subagent.py
tests/unit/bus/: conftest.py  test_message_bus.py  test_queue.py
tests/unit/providers/: test_providers.py
tests/unit/session/: test_manager.py
tests/unit/skills/autonomous/: conftest.py  test_task_planning.py
tests/unit/tools/: __init__.py  test_base.py  test_registry.py
tests/unit/tools/gis/: test_data_tools.py  test_proximity.py
workspace/data/: analyze_landuse.py
